--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Google Sign-in -->
     <div id="google-login-box" class="hidden">
       <div id="g_id_onload"
-           data-client_id="YOUR_GOOGLE_CLIENT_ID"
+           data-client_id="689243536167-582gedbs8cit12prgoki3tir5q36g9cd.apps.googleusercontent.com"
            data-context="signin"
            data-auto_prompt="false"
            data-callback="handleGoogleSignIn">
@@ -59,14 +59,15 @@
   <!-- JS Code -->
   <script>
     // Firebase config
-    const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_PROJECT_ID.appspot.com",
-      messagingSenderId: "SENDER_ID",
-      appId: "APP_ID"
-    };
+      const firebaseConfig = {
+    apiKey: "AIzaSyAhSLSI_QA-VhXmzGhu_SLDFEvASz9rCek",
+    authDomain: "travel-log-webapp-cfbcc.firebaseapp.com",
+    projectId: "travel-log-webapp-cfbcc",
+    storageBucket: "travel-log-webapp-cfbcc.firebasestorage.app",
+    messagingSenderId: "3684158120",
+    appId: "1:3684158120:web:8fbbaacfb9216b29b9509d",
+    measurementId: "G-N1LJJYEWQ2"
+  };
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
 
