--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Travel Log Login</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./css/style.css">
 
   <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
@@ -46,6 +46,6 @@
 
   </div>
 
-  <script src="app.js"></script>
+  <script src="./js/app.js"></script>
 </body>
 </html>
