--- a/dashboard.html
+++ b/dashboard.html
@@ -16,7 +16,7 @@
   <div class="navbar">
     <div class="user-info">
       <div class="avatar"></div>
-      <span id="driverName">Hello, John Doe</span>
+      <span id="driverName"></span>
     </div>
     <div class="menu">
       <button onclick="showSection('home')">Home</button>
