--- a/dashboard.html
+++ b/dashboard.html
@@ -95,6 +95,22 @@
 // Function to load pending journeys when the page loads
 document.addEventListener('DOMContentLoaded', function() {
   // Fetch pending journeys from Google Sheets web app endpoint
+  const driverData = JSON.parse(localStorage.getItem('driverData'));
+    
+    if (driverData) {
+        // Display driver name
+        const driverNameElement = document.getElementById('driverName');
+        if (driverNameElement) {
+            driverNameElement.textContent = driverData.name;
+        }
+        
+        // You can use other data as needed
+        console.log('Driver ID:', driverData.id);
+        console.log('Phone:', driverData.phoneNumber);
+    } else {
+        // If no driver data found, redirect to login
+        window.location.href = 'login.html';
+    }
   fetch("https://script.google.com/macros/s/AKfycby6qC6DKPeZfVgNobLn-Qo68YMLI02uUfCO5dMbwOsNDcxBJ8CaIBSORuscUfNsnLsV7w/exec?action=pending-journeys")
     .then(response => {
       if (!response.ok) {
