--- a/dashboard.html
+++ b/dashboard.html
@@ -216,7 +216,7 @@ function saveAsPending() {
 
   // Create journey data object
   const journeyData = {
-    action: 'add-pending-journey',
+    type: 'add-pending-journey',
     vehicleNumber: vehicleNumber,
     vehicleName: vehicleName,
     startPoint: startPoint,
