--- a/dashboard.html
+++ b/dashboard.html
@@ -202,7 +202,7 @@ function saveAsPending() {
    const driverData = JSON.parse(localStorage.getItem('driverData'));
   const driverName = driverData.name;
   const driverId= driverData.id;
-  const driverPhone = driverData.phone;
+  const driverPhone = driverData.phoneNumber;
   const vehicleNumber = document.getElementById('vehicleNumber').value;
   const vehicleName = document.getElementById('vehicleName').value;
   const startPoint = document.getElementById('startPoint').value;
