--- a/dashboard.html
+++ b/dashboard.html
@@ -243,7 +243,10 @@ function saveAsPending() {
       "Content-Type": "application/json"
     }
   })
-  .then(response => response.text())
+  .then(response => {
+  if (!response.ok) throw new Error("Network error");
+  return response.json(); 
+})
   .then(result => {
     console.log("Save as Pending result:", result);
     alert("Journey saved as pending successfully!");
