--- a/dashboard.html
+++ b/dashboard.html
@@ -238,6 +238,7 @@ function saveAsPending() {
   fetch("https://script.google.com/macros/s/AKfycby6qC6DKPeZfVgNobLn-Qo68YMLI02uUfCO5dMbwOsNDcxBJ8CaIBSORuscUfNsnLsV7w/exec", {
     method: 'POST',
     body: JSON.stringify(journeyData),
+    mode: 'no-cors',
     headers: {
       "Content-Type": "application/json"
     }
