--- a/dashboard.html
+++ b/dashboard.html
@@ -242,18 +242,12 @@ function saveAsPending() {
       "Content-Type": "application/json"
     }
   })
-  .then(response => {
-  if (!response.ok) throw new Error("Network error");
-  return response.json(); // ✅ Parse JSON response
-})
+  .then(response =>response.text())
   .then(result => {
     console.log("Save as Pending result:", result);
     alert("Journey saved as pending successfully!");
-    // Clear the form or redirect as needed
     document.getElementById('journeyForm').reset();
-    // Optionally switch back to home section
     showSection('home');
-    // Refresh the pending journeys list
     location.reload();
   })
   .catch(error => {
