--- a/dashboard.html
+++ b/dashboard.html
@@ -304,7 +304,7 @@ function submitCompletedJourney() {
 
   // Create completion data object
   const completionData = {
-    type: 'complete-journey',
+    type: 'submit-complete-journey',
     travelId: travelId,
     driverId: driverId,
     vehicleNumber: vehicleNumber,
