--- a/dashboard.html
+++ b/dashboard.html
@@ -176,6 +176,7 @@ function completeJourney(travelId) {
   const driverId= driverData.id;
   fetch("https://script.google.com/macros/s/AKfycby6qC6DKPeZfVgNobLn-Qo68YMLI02uUfCO5dMbwOsNDcxBJ8CaIBSORuscUfNsnLsV7w/exec", {
     method: 'POST',
+    mode: 'no-cors',
     headers: {
       'Content-Type': 'application/json',
     },
