--- a/dashboard.html
+++ b/dashboard.html
@@ -174,17 +174,13 @@ document.addEventListener('DOMContentLoaded', function() {
 function completeJourney(travelId) {
   const driverData = JSON.parse(localStorage.getItem('driverData'));
   const driverId= driverData.id;
-  fetch("https://script.google.com/macros/s/AKfycby6qC6DKPeZfVgNobLn-Qo68YMLI02uUfCO5dMbwOsNDcxBJ8CaIBSORuscUfNsnLsV7w/exec", {
-    method: 'POST',
-    body: JSON.stringify({
-      type: "complete-journey",
-      travelId: travelId,
-      driverId:driverId
-    }),
+  fetch("https://script.google.com/macros/s/AKfycby6qC6DKPeZfVgNobLn-Qo68YMLI02uUfCO5dMbwOsNDcxBJ8CaIBSORuscUfNsnLsV7w/exec?action=complete-journey&travelId=${encodeURIComponent(travelId)}&driverId=${encodeURIComponent(driverId)}", {
+    method: 'GET',
     mode: 'no-cors',
     headers: {
       'Content-Type': 'application/json',
-    }
+    },
+    redirect: 'follow'
   })
  .then(response =>response.text())
   .then(journey => {
