--- a/dashboard.html
+++ b/dashboard.html
@@ -442,7 +442,7 @@ function loadCompletedJourneys() {
           <td>${formatTime(journey.StartTime)}</td>
           <td>${formatTime(journey.EndTime)}</td>
           <td>${duration}</td>
-          <td>${journey.PassengerCount || ''}</td>
+          <td>${journey.NoPassengers || ''}</td>
           <td>${journey.PassengerName || ''}</td>
           <td>${journey.PassengerPhone || ''}</td>
         `;
