--- a/dashboard.html
+++ b/dashboard.html
@@ -99,7 +99,7 @@ document.addEventListener('DOMContentLoaded', function() {
         
     } else {
         // If no driver data found, redirect to login
-        window.location.href = 'login.html';
+        window.location.href = './index.html';
     }
   fetch("https://script.google.com/macros/s/AKfycby6qC6DKPeZfVgNobLn-Qo68YMLI02uUfCO5dMbwOsNDcxBJ8CaIBSORuscUfNsnLsV7w/exec?action=pending-journeys")
     .then(response => {
