--- a/dashboard.html
+++ b/dashboard.html
@@ -101,7 +101,9 @@ document.addEventListener('DOMContentLoaded', function() {
         // If no driver data found, redirect to login
         window.location.href = './index.html';
     }
-  fetch("https://script.google.com/macros/s/AKfycby6qC6DKPeZfVgNobLn-Qo68YMLI02uUfCO5dMbwOsNDcxBJ8CaIBSORuscUfNsnLsV7w/exec?action=pending-journeys")
+
+  const driverId= driverData.id;
+  fetch(`https://script.google.com/macros/s/AKfycby6qC6DKPeZfVgNobLn-Qo68YMLI02uUfCO5dMbwOsNDcxBJ8CaIBSORuscUfNsnLsV7w/exec?action=pending-journeys&driverId=${encodeURIComponent(driverId)}`)
     .then(response => {
       if (!response.ok) {
         throw new Error('Network response was not ok');
